src/test/resources/30/single/opf/invalid/malformed.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" 
    xmlns:dc="http://purl.org/dc/elements/1.1/" unique-identifier="uid">
    <!-- malformed -->
    <metadata></package>
        <dc:title>Norwegian Wood</dc:title>
        <dc:identifier id="uid">urn:uuid:550e8400-e29b-41d4-a716-446655440000</dc:identifier>
        <dc:language>en</dc:language>        
        <meta property="dcterms:modified">2011-08-19T12:00:00Z</meta>               
    </metadata> 
    <manifest>
        <item id="text001" href="text001.xhtml" media-type="application/xhtml+xml" />
        <item id="text002" href="text002.xhtml" media-type="application/xhtml+xml" />
        <item id="img001" href="image.png" media-type="image/png" properties="cover-image" />
        <item id="img002" href="image.jpg" media-type="image/jpg" />
        <item id="ncx" href="ncx.ncx" media-type="application/x-dtbncx+xml" />
    </manifest>
    <spine toc="ncx">
        <itemref idref="text001" />
        <itemref idref="text002" />
    </spine>
</package>